test/chainsaw/authpolicy/audience_update_triggers_reconcile/authpolicy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: audience-configmap
data:
  AUDIENCE: "audience-v1"
---
apiVersion: v1
kind: Secret
metadata:
  name: audience-secret
type: Opaque
data:
  AUDIENCE: c2VjcmV0LWF1ZGllbmNlLXYx  # secret-audience-v1
---
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  allowedAudiences:
    - valueFrom:
        configMapKeyRef:
          name: audience-configmap
          key: AUDIENCE
    - valueFrom:
        secretKeyRef:
          name: audience-secret
          key: AUDIENCE
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
