test/chainsaw/authpolicy/audience_update_triggers_reconcile/secret-updated.yaml
apiVersion: v1
kind: Secret
metadata:
  name: audience-secret
type: Opaque
data:
  AUDIENCE: c2VjcmV0LWF1ZGllbmNlLXYy  # secret-audience-v2
