test/chainsaw/authpolicy/audience_update_triggers_reconcile/assert-after-configmap-update.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: auth-policy
  labels:
    ztoperator.kartverket.no/controller: authpolicy
    app.kubernetes.io/managed-by: ztoperator
spec:
  jwtRules:
    - audiences:
        - audience-v2
        - secret-audience-v1
      forwardOriginalToken: true
      issuer: http://mock-oauth2.auth:8080/entraid
      jwksUri: http://mock-oauth2.auth:8080/entraid/jwks
  selector:
    matchLabels:
      app: application
